fix: align remaining challenge flows with secure behavior