@@ -1,6 +1,8 @@
 package utils;
 
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
@@ -28,26 +30,38 @@ public class XssFilter {
 
   private static final Logger log = LogManager.getLogger(XssFilter.class);
 
-  private static final String SAFE_FALLBACK_URL =
-      "https://www.owasp.org/index.php/OWASP_Security_Shepherd";
-
-  /** Accept only absolute HTTP(S) links before placing a user supplied URL in an HTML attribute. */
-  public static String validateHttpUrl(String input) {
+  /**
+   * Confines a user supplied link to an absolute http(s) URL.
+   *
+   * <p>Only the http and https schemes are allowed through, so values that would turn an href into
+   * a script sink (javascript:, data:, vbscript:, protocol relative links) are rejected outright
+   * rather than filtered. Anything that is not a well formed absolute http(s) URL is replaced with
+   * a harmless placeholder link. Callers must still encode the result for the context it is written
+   * into.
+   *
+   * @param input URL to validate
+   * @return The submitted URL when it is an absolute http(s) URL, otherwise a placeholder link
+   */
+  public static String safeHttpUrl(String input) {
+    final String howToMakeAUrlUrl =
+        "https://www.google.com/search?q=What+does+a+HTTP+link+look+like";
     if (input == null) {
-      return SAFE_FALLBACK_URL;
+      return howToMakeAUrlUrl;
     }
     try {
-      URL url = new URL(input);
-      String protocol = url.getProtocol();
-      if (("http".equalsIgnoreCase(protocol) || "https".equalsIgnoreCase(protocol))
-          && url.getHost() != null
-          && !url.getHost().isEmpty()) {
-        return url.toExternalForm();
+      URI theUri = new URI(input.trim());
+      String scheme = theUri.getScheme();
+      if (theUri.isAbsolute()
+          && scheme != null
+          && (scheme.equalsIgnoreCase("http") || scheme.equalsIgnoreCase("https"))
+          && theUri.getHost() != null) {
+        return theUri.toASCIIString();
       }
-    } catch (MalformedURLException e) {
-      log.debug("Rejected malformed URL");
+      log.debug("Rejected link that was not an absolute http(s) URL");
+    } catch (URISyntaxException e) {
+      log.debug("Could not parse URL from input: " + e.toString());
     }
-    return SAFE_FALLBACK_URL;
+    return howToMakeAUrlUrl;
   }
 
   /**
